--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@ body{
 }
   
 header{
-    height:30vw; 
+    height:30vh; 
     width:100%;
     background-color: tomato;
 }
 section{
     width:100%;
-    height:50vw;
+    height:50vh;
     background-color:dodgerblue;
 }
 footer{
      width:100%;
-     height:20vw;
+     height:20vh;
     background-color: cornsilk;
 }
     
