--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ footer{
 }
     
 header div#name{
-    font-size:400%; 
+    font-size:4em; 
     margin:auto;
 }
   
 #flex{
 margin:0;
- display-flex;
+display-flex;
 flex-direction: row ;
 }
 </style>
