--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ footer{
     
 header div h1{
     width: 100%;
-    font-size: 4em; 
+    font-size: 1.5em; 
     margin:0;
 }
 
@@ -88,7 +88,7 @@ font-size:1.5em;
                    <b>sairaju623@gmail.com</b>             
                </div>
                <div class="item">Contact
-                    <a href="tel:408-896-4893">Call me</a>
+                    <a href="tel:408-896-4893">408-896-4893</a>
                </div>
                <div class="item">
                      <a href="https://github.com/SaiKrishnam">
