--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
    <section>
        
-     <button class="btn btn-default">Click Me</button>
+     <button class="btn btn-primary">Click Me</button>
        
    </section>
     <footer>
